# server

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/protocol/: codec.rs  connection.rs  data_types.rs  mod.rs
server/src/protocol/packets/: handshake.rs  login.rs  mod.rs  play.rs  status.rs
src/: connection.rs  main.rs
src/protocol/: api.rs  codec.rs  data_types.rs  mod.rs
src/protocol/packets/: derive.rs  handshake.rs  login.rs  play.rs  status.rs
